[B][COLOR red]Update - v3.6.7 - May 14, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed Library .strm playback. Previous update added ability
    to compare meta received from tmdbhelper vs. Venom's
    cached meta and use the largest.  I neglected that .strm
    files are also player files and meta sent is None type. Now
    I compare this as well and if the item is cached that meta
    is now used vs. scraped meta saved locally, which is more
    limited than Venom's cached meta.[/I]

[B][COLOR red]Update - v3.6.6 - May 14, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed Remove HVAC and Remove 3D options.
    Previousely there would be random failures if specific
    free hosters were enabled.  Some free hosters were
    missing 'info' keys in the sources dict.  This has been
    fixed in both Venom and missing keys added to
    OpenScrapers.[/I]

[B][COLOR red]Update - v3.6.5 - May 12, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added new setting option to disable Cloudflare
    protected providers due to recent challenge failures.[/I]
[COLOR yellow]--[/COLOR][I] Reorganized all settings under "Source Options"
    to better follow the flow of scrapping from start to results.[/I]
[COLOR yellow]--[/COLOR][I] Changed all Source filtering options to be "Remove"
    options.  Previously options were "Enable" or "Remove"
    and this just seems to be cleaner.[/I]
[COLOR yellow]--[/COLOR][I] Added new setting option "Allow Rescrape to first
    clear item providers".  Previously Rescrape would only
    cache new providers and read in previously cached providers.
    Now you have the option to make Rescrape fully start from
    scratch for the selected item.  This option will only clear
    provider links for the item you are selecting, this is not a full "Clear
    Providers" built in function.[/I]
[COLOR yellow]--[/COLOR][I] Improved scrape time.[/I]
[COLOR yellow]--[/COLOR][I] Added IMDBNUMBER to episode InfoLabels for a4ksubtitles.[/I]